# NHL

./: NHL.cabal  README.md  stack.yaml
app/: Main.hs
src/NHL/: Games.hs  Types.hs
