name:                NHL
version:             0.1.0.0
author:              Tohveli
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     NHL.Games, NHL.Types
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.9,
                       bytestring >=0.10 && <0.11,
                       lens,
                       wreq,
                       parsec,
                       aeson

  hs-source-dirs:      src
  default-language:    Haskell2010

executable NHL-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , NHL
  default-language:    Haskell2010
